Tower-Terror: Demo [Update: 3.5]

--- a/style.css
+++ b/style.css
@@ -68,7 +68,10 @@ color: black;
         justify-content: center;
     }
 
-
+/* .word {
+    display:flex;
+   text-align: center;
+} */
 
 /* 
 .Letters:hover {
