--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
     padding: 0px;
     font-family: "Caveat", serif;
     font-optical-sizing: auto;
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png")
 }
 h1 {
     text-align: center;
@@ -39,7 +40,7 @@ color: black;
 
 #Reset:hover {
     transition: all 1s;
-    font-size: 40px;
+    font-size: 50px;
     color: rgb(0, 0, 0);
     
 }
@@ -48,7 +49,7 @@ button {
     border: solid 1px black;
     background-color: whitesmoke;
     font-size: 50px;
-    width: 50px;
+
 }
 .dash:hover {
     transition: all 0.5s;
@@ -60,10 +61,12 @@ button {
 }
 .Letters {
     text-align: center;
+    width: 50px;
+    padding: 10px;
 }
 .Letters:hover {
     transition: all 1s;
-    padding: 10px;
+    padding: 20px;
     color: black
 }
  .Row1 {
